--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="ejercicio1.js"></script>
     <script type="text/javascript" src="ejercicio2.js"></script>
+    <script type="text/javascript" src="ejercicio3.js"></script>
+    <script type="text/javascript" src="ejercicio4.js"></script>
+    <script type="text/javascript" src="ejercicio5.js"></script>
+    <script type="text/javascript" src="ejercicio6.js"></script>
     <title>Document</title>
 </head>
 <body>
