--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="ejercicio4.js"></script>
     <script type="text/javascript" src="ejercicio5.js"></script>
     <script type="text/javascript" src="ejercicio6.js"></script>
+    <script type="text/javascript" src="ejercicio7.js"></script>
     <title>Document</title>
 </head>
 <body>
